--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,9 @@ Description: A set of functions that can be used to help ecologists and
     calculating spatial metrics such as AOO and EOO
 BugReports: https://github.com/mlammens/occUncertainty/issues
 Depends:
-    dplyr
+    knitr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 VignetteBuilder: knitr
-RoxygenNote: 7.0.0
+RoxygenNote: 7.0.2
