--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,12 @@ Description: A set of functions that can be used to help ecologists and
     calculating spatial metrics such as AOO and EOO
 BugReports: https://github.com/mlammens/occUncertainty/issues
 Depends:
-    knitr,
-    ConR
+    knitr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 VignetteBuilder: knitr
 RoxygenNote: 7.0.2
 Suggests: 
-    rmarkdown
+    rmarkdown,
+    testthat
