--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Description: A set of functions that can be used to help ecologists and
 BugReports: https://github.com/mlammens/occUncertainty/issues
 Depends:
     knitr
+    ConR
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
