add rgdal depend

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Description: A set of functions that can be used to help ecologists and
 BugReports: https://github.com/mlammens/occUncertainty/issues
 Depends:
     knitr,
-    ConR
+    ConR, 
+    rgdal
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
