--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: occUncertain
 Type: Package
-Title: Functions For Addressing Occurence Point Uncertainty When Calculating Spatial Metrics
+Title: Addressing Occurence Point Uncertainty When Calculating Spatial Metrics
 Version: 0.1.0
-Date: 2020-03-12
+Date: 2023-01-14
 Authors@R: c(
     person("Samuel V.", "Chang Triguero", email = "sc92478p@pace.edu", role = c("aut", "cre")), 
     person("Matthew E.", "Aiello-Lammens", email = "matt.lammens@gmail.com", role = "aut"))
 Description: A set of functions that can be used to help ecologists and 
     conservation biologists account for occurence point uncertainty when 
     calculating spatial metrics such as AOO and EOO.
-BugReports: https://github.com/mlammens/occUncertainty/issues
+BugReports: https://github.com/mlammens/occUncertain/issues
 Depends:
     knitr,
     ConR, 
