Adding reference to method for converting meters to dec deg.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,14 +6,15 @@ Date: 2023-01-14
 Authors@R: c(
     person("Samuel V.", "Chang Triguero", email = "changalfsam@gmail.com", role = c("aut", "cre")), 
     person("Matthew E.", "Aiello-Lammens", email = "matt.lammens@gmail.com", role = "aut"))
-Description: Functions for repeatable processing of species occurrence datasets that makes it easier to propagate 
+Description: Repeatable processing of species occurrence datasets that makes it easier to propagate 
     georeferencing imprecisions and data input mistakes to downstream analyses, allowing analysts to assess 
-    the impacts of these imprecisions. Users can use the software to: 
-    (a) change each coordinate record's uncertainty from meters to decimal degrees, 
+    the impacts of these imprecisions in quantifying range of occurrence (EOO) or  area of occupancy (AOO) . Users can use the software to: 
+    (a) change each coordinate record's uncertainty from meters to decimal degrees,
+    The formula for converting from meters to decimal degrees is in part based on information from the ESRI ArcUser magazine "Measuring in Arc-Seconds" at this site{https://www.esri.com/news/arcuser/0400/wdside.html}
     (b) deal with records that don't have uncertainty values in multiple ways, 
     (c) create a new random location for each occurrence using a uniform distribution with a defined interval 
     within the occurrence location uncertainty, and 
-    (d) use repetitions to quantify range of occurrence (EOO) or occupancy (AOO) with attribute uncertainty. 
+    (d) use repetitions to quantify EOO and AOO with attribute uncertainty. 
 BugReports: https://github.com/mlammens/occUncertain/issues
 Depends:
     knitr,
